--- a/css/style.css
+++ b/css/style.css
@@ -69,4 +69,71 @@ h4 {
   line-height: 112%;
 }
 
+.btn-primary, .btn-secondary {
+  display: inline-block;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  height: 4.8rem;
+  border-radius: 2.4rem;
+  padding: 0 2.6rem;
+}
+
+.btn-primary {
+  background-color: #FFC800;
+  color: #855B35;
+  transition: all 0.3s;
+}
+.btn-primary:hover {
+  background-color: #ffde66;
+}
+
+.btn-secondary {
+  background-color: transparent;
+  color: #00A5F0;
+  border: 1px solid #00A5F0;
+  transition: all 0.3s;
+}
+.btn-secondary:hover {
+  background-color: #00A5F0;
+  color: #FFFFFF;
+}
+.btn-secondary.white {
+  border: 1px solid #FFFFFF;
+  color: #FFFFFF;
+}
+.btn-secondary.white:hover {
+  background-color: #FFFFFF;
+  color: #00A5F0;
+}
+
+.card-depoimentos {
+  width: 100%;
+  max-width: 38.4rem;
+  height: 20.9rem;
+  background-color: rgba(241, 240, 245, 0.55);
+  border-radius: 8px;
+  padding: 3rem 4rem;
+}
+.card-depoimentos .user {
+  margin-bottom: 2rem;
+  display: flex;
+  flex-display: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.card-depoimentos .user strong {
+  display: block;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 1.8rem;
+  line-height: 112%;
+  letter-spacing: -1px;
+  color: #4E4B59;
+}
+.card-depoimentos p {
+  font-size: 1.8rem;
+  line-height: 150%;
+  color: #5F5C6B;
+}
+
 /*# sourceMappingURL=style.css.map */
