--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   list-style: none;
   border: none;
   font-family: "Inter", sans-serif;
+  text-decoration: none;
 }
 
 html {
@@ -31,6 +32,45 @@ button {
   max-width: 124.6rem;
   padding: 0 15px;
   margin: 0 auto;
+}
+
+header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  background-color: #00A5F0;
+  height: 8.8rem;
+}
+header .container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+header nav {
+  display: flex;
+  align-items: center;
+}
+header nav ul {
+  display: flex;
+  align-items: center;
+  margin-right: 5rem;
+}
+header nav ul li:not(:first-child) {
+  margin-left: 4.8rem;
+}
+header nav ul li a {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 150%;
+  color: #FFFFFF;
+  transition: color 0.3s;
+}
+header nav ul li a:hover {
+  color: #FFC800;
 }
 
 h1, h2, h3, h4 {
@@ -117,7 +157,7 @@ h4 {
 .card-depoimentos .user {
   margin-bottom: 2rem;
   display: flex;
-  flex-display: row;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
