--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ header {
   left: 0;
   display: flex;
   width: 100%;
-  background-color: #00A5F0;
   height: 8.8rem;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 }
 header .container {
   display: flex;
@@ -174,6 +174,97 @@ h4 {
   font-size: 1.8rem;
   line-height: 150%;
   color: #5F5C6B;
+}
+
+.s-hero {
+  width: 100%;
+  height: 78.5rem;
+  background: url("../../img/bg-hero.svg") no-repeat center center;
+  padding-top: 17.5rem;
+}
+.s-hero .container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.s-hero .text {
+  width: 100%;
+  max-width: 68.4rem;
+}
+.s-hero .text h3 {
+  opacity: 0.8;
+  font-weight: 600;
+  color: #FFFFFF;
+  margin-bottom: 3.2rem;
+}
+.s-hero .text h1 {
+  color: #FFFFFF;
+  margin-bottom: 3.9rem;
+}
+.s-hero .text ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 6.4rem;
+  width: 100%;
+  max-width: 62.1rem;
+}
+.s-hero .text ul li {
+  display: flex;
+  align-items: center;
+}
+.s-hero .text ul li .icon {
+  width: 4.8rem;
+  height: 4.8rem;
+  background: linear-gradient(180deg, rgba(53, 203, 226, 0.4) 0%, rgba(53, 202, 226, 0) 100%);
+  border-radius: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-right: 1.2rem;
+}
+.s-hero .text ul li span {
+  font-size: 1.8rem;
+  line-height: 2.2rem;
+  color: #FFFFFF;
+}
+.s-hero .area-image {
+  width: 100%;
+  max-width: 70.6rem;
+  margin-right: -17.4rem;
+}
+.s-hero .area-image h2 {
+  margin-bottom: 6.7rem;
+  text-align: center;
+  color: #FFFFFF;
+  opacity: 0.4;
+  font-width: 600;
+}
+.s-hero .area-image .image {
+  position: relative;
+  width: 100%;
+  height: 54.1rem;
+  top: 3.5rem;
+}
+.s-hero .area-image .image img {
+  position: absolute;
+}
+.s-hero .area-image .image .circle {
+  top: 2.8rem;
+  right: 4.3rem;
+}
+.s-hero .area-image .image .card-front {
+  top: 4.1rem;
+  left: 0;
+  z-index: 2;
+}
+.s-hero .area-image .image .card-back {
+  right: 8.67rem;
+  bottom: 4.66rem;
+  z-index: 1;
 }
 
 /*# sourceMappingURL=style.css.map */
