--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -93,3 +93,189 @@
     }
   }
 }
+
+.s-card-neon {
+  padding-top: 12.9rem;
+
+  .container {
+    @include flex(row, flex-start, space-between);
+  }
+
+  .left-area {
+    width: 100%;
+    max-width: 27.7rem;
+
+    .ilustra-mockup {
+      position: relative;
+      width: 100%;
+      max-width: 27.7rem;
+      margin-bottom: 12.9rem;
+
+      .circle {
+        position: absolute;
+        top: 8.7rem;
+        left: -21.4rem;
+        z-index: -1;
+        max-width: 37.7rem;
+
+      }
+    }
+
+    .text {
+      @include flex(column, center, flex-start);
+
+      .icon {
+        position: relative;
+        margin-bottom: 3.6rem;
+
+        &:before {
+          content: "";
+          width: 5px;
+          height: 8.3rem;
+          background: #000;
+          position: absolute;
+          top: -10.4rem;
+          left: calc(50% - 2.5px);
+          background: url("../img/points.svg") no-repeat center center;
+        }
+      }
+
+      .text-info {
+        @include flex(column, center, flex-start);
+
+        h3 {
+          color: $gray-600;
+        }
+
+        p {
+          font-size: 1.6rem;
+          line-height: 150%;
+          color: $gray-400;
+          opacity: 0.8;
+          margin-bottom: 2.6rem;
+        }
+
+        h3, p {
+          text-align: center;
+        }
+
+        ul {
+          li {
+            &:not(:last-child) {
+              margin-bottom: 2.6rem;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .right-area {
+    width: 100%;
+    max-width: 80rem;
+
+    .main-text {
+      margin-bottom: 11.4rem;
+
+      h2 {
+        max-width: 48.8rem;
+        color: $gray-600;
+        margin-bottom: 4.9rem;
+      }
+
+      ul {
+        margin-bottom: 3.2rem;
+
+        li {
+          @include flex(row, center, space-between);
+          border-bottom: 1px solid rgba(239, 239, 239, 0.9);
+          padding: 3.3rem 0rem;
+
+          &:first-child {
+            margin-top: 0;
+          }
+
+          .info {
+            display: flex;
+            align-items: center;
+
+            .txt {
+              margin-left: 4.3rem;
+
+              h3 {
+                color: $gray-400;
+              }
+
+              p {
+                font-size: 1.8rem;
+                line-height: 150%;
+                color: $gray-200;
+              }
+            }
+          }
+        }
+      }
+
+      .btn {
+        font-family: "Poppins", sans-serif;
+        display: inline-block;
+        font-width: 500;
+        font-size: 1.6rem;
+        line-height: 112%;
+        letter-spacing: -0.5px;
+        color: $brand-blue;
+
+        &:after {
+          content: '_';
+          margin-left: 0.8rem;
+          color: $brand-yellow;
+        }
+      }
+    }
+
+    .box-card {
+      @include flex(row, center, space-between);
+      width: 100%;
+      height: 41rem;
+      background: url("../img/bg-box-card-neon.svg") no-repeat center center;
+      border-radius: 12px;
+      padding-left: 5.9rem;
+
+      .text {
+        width: 100%;
+        max-width: 38rem;
+
+        h2, h3, p {
+          color: $white;
+        }
+
+        h2 {
+          margin-bottom: 1.1rem;
+        }
+
+        h3 {
+          max-width: 32.7rem;
+          margin-bottom: 0.8rem;
+        }
+
+        p {
+          font-size: 1.6rem;
+          line-height: 150%;
+          margin-bottom: 3.1rem;
+        }
+
+        .btns {
+          display: flex;
+          align-items: center;
+          gap: 1.6rem;
+        }
+
+      }
+
+      .image {
+        margin-right: -3.1rem;
+      }
+    }
+
+  }
+}
