--- a/css/style.css
+++ b/css/style.css
@@ -463,4 +463,78 @@ h4 {
   width: 1.7rem;
 }
 
+.s-conta-digital {
+  padding-top: 12.7rem;
+  padding-bottom: 8.5rem;
+}
+.s-conta-digital .container {
+  display: flex;
+}
+.s-conta-digital .text {
+  width: 100%;
+  max-width: 54.2rem;
+}
+.s-conta-digital .text h2 {
+  color: #33303E;
+  margin-bottom: 4.5rem;
+}
+.s-conta-digital .text h2 span {
+  display: block;
+  color: #C6C5Ce;
+  opacity: 0.8;
+  margin-bottom: 0.8rem;
+}
+.s-conta-digital .text ul {
+  margin-bottom: 6.1rem;
+}
+.s-conta-digital .text ul li {
+  display: flex;
+  align-items: flex-start;
+}
+.s-conta-digital .text ul li:not(:last-child) {
+  margin-bottom: 4.5rem;
+}
+.s-conta-digital .text ul li .icon {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 4.5rem;
+  height: 4.5rem;
+  background: #00D7D7;
+  border-radius: 0.8rem;
+  margin-right: 2.6rem;
+}
+.s-conta-digital .text ul li .info h4 {
+  margin-bottom: 0.4rem;
+  color: #5F5C6B;
+}
+.s-conta-digital .text ul li .info p {
+  font-size: 1.8rem;
+  line-height: 150%;
+  color: #7A7786;
+}
+.s-conta-digital .image {
+  position: relative;
+  width: 100%;
+  max-width: 71.2rem;
+  height: 59.8rem;
+  margin-right: -3.8rem;
+  left: 12.5rem;
+}
+.s-conta-digital .image img {
+  position: absolute;
+}
+.s-conta-digital .image img.mockup-01 {
+  bottom: 4.7rem;
+}
+.s-conta-digital .image img.mockup-02 {
+  top: 3rem;
+  left: 25.8rem;
+}
+.s-conta-digital .image img.circle {
+  right: 0;
+  bottom: 0;
+}
+
 /*# sourceMappingURL=style.css.map */
