--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -320,3 +320,93 @@
   }
 
 }
+
+.s-conta-digital {
+  padding-top: 12.7rem;
+  padding-bottom: 8.5rem;
+
+  .container {
+    display: flex;
+  }
+
+  .text {
+    width: 100%;
+    max-width: 54.2rem;
+
+    h2 {
+      color: $gray-600;
+      margin-bottom: 4.5rem;
+
+      span {
+        display: block;
+        color: $gray-200;
+        opacity: 0.8;
+        margin-bottom: 0.8rem;
+      }
+    }
+
+    ul {
+      margin-bottom: 6.1rem;
+
+      li {
+        display: flex;
+        align-items: flex-start;
+
+        &:not(:last-child) {
+          margin-bottom: 4.5rem;
+        }
+
+        .icon {
+          @include flex(row, center, center);
+          width: 4.5rem;
+          height: 4.5rem;
+          background: $brand-green-light;
+          border-radius: 0.8rem;
+          margin-right: 2.6rem;
+        }
+
+        .info {
+          h4 {
+            margin-bottom: 0.4rem;
+            color: $gray-400;
+          }
+
+          p {
+            font-size: 1.8rem;
+            line-height: 150%;
+            color: $gray-300;
+          }
+        }
+      }
+    }
+
+  }
+
+  .image {
+    position: relative;
+    width: 100%;
+    max-width: 71.2rem;
+    height: 59.8rem;
+    margin-right: -3.8rem;
+    left: 12.5rem;
+
+    img {
+      position: absolute;
+
+      &.mockup-01 {
+        bottom: 4.7rem;
+      }
+
+      &.mockup-02 {
+        top: 3rem;
+        left: 25.8rem ;
+      }
+
+      &.circle {
+        right: 0;
+        bottom: 0;
+      }
+    }
+  }
+
+}
