--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,124 @@ header nav ul li a:hover {
   color: #FFC800;
 }
 
+footer {
+  background-color: #0073CE;
+  padding-top: 4.9rem;
+}
+footer .top {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(73, 196, 253, 0.2);
+  padding-bottom: 4.8rem;
+  margin-bottom: 5.7rem;
+}
+footer .top .share {
+  display: flex;
+  align-items: center;
+}
+footer .top .share span {
+  color: #FFFFFF;
+  font-size: 1.4rem;
+  line-height: 125%;
+  opacity: 0.7;
+}
+footer .top .share ul {
+  display: flex;
+  align-items: center;
+  margin-left: 3rem;
+}
+footer .top .share ul li:not(:first-child) {
+  margin-left: 3rem;
+}
+footer .main {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(73, 196, 253, 0.2);
+  padding-bottom: 6.2rem;
+  margin-bottom: 3.9rem;
+}
+footer .main nav {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 86rem;
+}
+footer .main nav .item strong {
+  font-family: "Poppins", sans-serif;
+  font-width: 600;
+  font-size: 1.6rem;
+  line-height: 125%;
+  color: #FFFFFF;
+  display: inline-block;
+  margin-bottom: 2.5rem;
+}
+footer .main nav .item ul li:not(:last-child) {
+  margin-bottom: 2.9rem;
+}
+footer .main nav .item ul li a {
+  font-size: 1.4rem;
+  color: #FFFFFF;
+  line-height: 1.7;
+  opacity: 0.7;
+  transition: all 0.3s;
+}
+footer .main nav .item ul li a:hover {
+  opacity: 1;
+}
+footer .main .btns {
+  width: 100%;
+  max-width: 28rem;
+}
+footer .main .btns button {
+  width: 100%;
+  height: 7.6rem;
+  border-radius: 0.6rem;
+  display: flex;
+  align-items: center;
+  padding-left: 2.5rem;
+  background-color: rgba(0, 164, 240, 0.23);
+}
+footer .main .btns button:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+footer .main .btns button .info {
+  margin-left: 2.4rem;
+}
+footer .main .btns button .info strong, footer .main .btns button .info span {
+  display: block;
+  line-height: 150%;
+  color: #FFFFFF;
+  font-size: 1.4rem;
+}
+footer .main .btns button .info strong {
+  text-align: left;
+  font-weight: bold;
+}
+footer .msg {
+  display: flex;
+  align-items: flex-start;
+  border-bottom: 4px solid #FFC800;
+  padding-bottom: 3.4rem;
+}
+footer .msg .icon {
+  font-size: 1.8rem;
+}
+footer .msg p {
+  width: 100%;
+  max-width: 66rem;
+  color: #FFFFFF;
+  margin-left: 2.5rem;
+  font-size: 1.4rem;
+  line-height: 150%;
+  opacity: 0.8;
+}
+
 h1, h2, h3, h4 {
   font-family: "Poppins", sans-serif;
 }
